--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "rgph-djibouti-2024-frontend",
-  "private": true,
+  "name": "rgph-frontend",
   "type": "module",
+  "version": "1.0.0",
+  "private": true,
+  "engines": {
+    "node": ">=20.x",
+    "npm": ">=10.x"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -11,22 +16,20 @@
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
-    "@nuxtjs/i18n": "8.3.3",
-    "@pinia/nuxt": "0.5.4",
-    "chart.js": "^4.4.4",
+    "@nuxtjs/i18n": "^8.0.0",
+    "@pinia/nuxt": "^0.5.0",
     "leaflet": "^1.9.4",
-    "nuxt": "3.13.2",
-    "pinia": "^2.2.2",
-    "vue-chartjs": "^5.3.1"
+    "chart.js": "^4.4.0",
+    "nuxt": "^3.13.0",
+    "pinia": "^2.2.0",
+    "vue": "latest"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.21",
-    "@types/node": "^25.2.2",
-    "sass": "^1.79.3",
-    "typescript": "^5.9.3",
-    "vue-tsc": "^2.1.10"
-  },
-  "overrides": {
-    "unhead": "^1.11.14"
+    "@types/leaflet": "^1.9.12",
+    "@types/node": "^20.0.0",
+    "sass": "^1.69.0",
+    "sass-embedded": "^1.69.5",
+    "typescript": "^5.3.0",
+    "vue-tsc": "^1.8.0"
   }
 }
